[package]
name = "arp-skeleton"
version = "0.1.0"
edition = "2021"
description = "Shared library skeleton"
keywords = ["axum", "plugin"]
categories = ["plugins"]
repository = "https://github.com/mrhdias/arp-skeleton"
authors = ["Henrique Dias <mrhdias@gmail.com>"]
readme = "README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = "1.4.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
